plugins/source/src/syntax/snapshots/nyne_source__syntax__tests__markdown_decompose_headings.snap
---
source: plugins/coding/src/syntax/tests.rs
assertion_line: 150
expression: "decompose(\"md\", source)"
---
[
    Fragment {
        name: "Getting Started",
        kind: Section {
            level: 1,
        },
        byte_range: 0..102,
        signature: None,
        visibility: None,
        metadata: Some(
            Document {
                index: 0,
            },
        ),
        name_byte_offset: 0,
        children: [
            Fragment {
                name: "Installation",
                kind: Section {
                    level: 2,
                },
                byte_range: 37..75,
                signature: None,
                visibility: None,
                metadata: Some(
                    Document {
                        index: 0,
                    },
                ),
                name_byte_offset: 37,
                children: [],
                parent_name: None,
                fs_name: None,
            },
            Fragment {
                name: "Usage",
                kind: Section {
                    level: 2,
                },
                byte_range: 75..102,
                signature: None,
                visibility: None,
                metadata: Some(
                    Document {
                        index: 1,
                    },
                ),
                name_byte_offset: 75,
                children: [],
                parent_name: None,
                fs_name: None,
            },
        ],
        parent_name: None,
        fs_name: None,
    },
    Fragment {
        name: "API Reference",
        kind: Section {
            level: 1,
        },
        byte_range: 102..133,
        signature: None,
        visibility: None,
        metadata: Some(
            Document {
                index: 1,
            },
        ),
        name_byte_offset: 102,
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
