plugins/source/src/syntax/snapshots/nyne_source__syntax__tests__markdown_fs_mapping_slugified.snap
---
source: plugins/coding/src/syntax/tests.rs
assertion_line: 156
expression: frags
---
[
    Fragment {
        name: "Getting Started",
        kind: Section {
            level: 1,
        },
        byte_range: 0..48,
        signature: None,
        visibility: None,
        metadata: Some(
            Document {
                index: 0,
            },
        ),
        name_byte_offset: 0,
        children: [
            Fragment {
                name: "Quick Setup",
                kind: Section {
                    level: 2,
                },
                byte_range: 26..48,
                signature: None,
                visibility: None,
                metadata: Some(
                    Document {
                        index: 0,
                    },
                ),
                name_byte_offset: 26,
                children: [],
                parent_name: None,
                fs_name: Some(
                    "00-quick-setup",
                ),
            },
        ],
        parent_name: None,
        fs_name: Some(
            "00-getting-started",
        ),
    },
]
