plugins/source/src/syntax/snapshots/nyne_source__syntax__tests__python_decompose_function_and_class.snap
---
source: plugins/source/src/syntax/tests.rs
expression: "decompose(\"py\", source)"
---
[
    Fragment {
        name: "greet",
        kind: Symbol(
            Function,
        ),
        span: FragmentSpan {
            byte_range: 0..70,
            full_span: 0..70,
            name_byte_offset: 4,
        },
        signature: Some(
            "def greet(name):",
        ),
        visibility: None,
        metadata: None,
        children: [
            Fragment {
                name: "docstring",
                kind: Docstring,
                span: FragmentSpan {
                    byte_range: 21..41,
                    full_span: 21..41,
                    name_byte_offset: 21,
                },
                signature: None,
                visibility: None,
                metadata: None,
                children: [],
                parent_name: Some(
                    "greet",
                ),
                fs_name: None,
            },
        ],
        parent_name: None,
        fs_name: None,
    },
    Fragment {
        name: "Person",
        kind: Symbol(
            Class,
        ),
        span: FragmentSpan {
            byte_range: 72..140,
            full_span: 72..140,
            name_byte_offset: 78,
        },
        signature: Some(
            "class Person:",
        ),
        visibility: None,
        metadata: None,
        children: [
            Fragment {
                name: "__init__",
                kind: Symbol(
                    Function,
                ),
                span: FragmentSpan {
                    byte_range: 90..140,
                    full_span: 90..140,
                    name_byte_offset: 94,
                },
                signature: Some(
                    "def __init__(self, name):",
                ),
                visibility: None,
                metadata: None,
                children: [],
                parent_name: Some(
                    "Person",
                ),
                fs_name: None,
            },
        ],
        parent_name: None,
        fs_name: None,
    },
]
