plugins/source/src/syntax/snapshots/nyne_source__syntax__tests__python_decorated_class.snap
---
source: plugins/coding/src/syntax/tests.rs
assertion_line: 102
expression: "decompose(\"py\", \"@dataclass\\nclass Point:\\n    x: int\\n    y: int\\n\")"
---
[
    Fragment {
        name: "Point",
        kind: Symbol(
            Class,
        ),
        byte_range: 0..45,
        signature: Some(
            "@dataclass",
        ),
        visibility: None,
        metadata: None,
        name_byte_offset: 17,
        children: [
            Fragment {
                name: "decorators",
                kind: Decorator,
                byte_range: 0..10,
                signature: None,
                visibility: None,
                metadata: None,
                name_byte_offset: 0,
                children: [],
                parent_name: Some(
                    "Point",
                ),
                fs_name: None,
            },
            Fragment {
                name: "x",
                kind: Symbol(
                    Variable,
                ),
                byte_range: 28..34,
                signature: Some(
                    "x: int",
                ),
                visibility: None,
                metadata: None,
                name_byte_offset: 28,
                children: [],
                parent_name: Some(
                    "Point",
                ),
                fs_name: None,
            },
            Fragment {
                name: "y",
                kind: Symbol(
                    Variable,
                ),
                byte_range: 39..45,
                signature: Some(
                    "y: int",
                ),
                visibility: None,
                metadata: None,
                name_byte_offset: 39,
                children: [],
                parent_name: Some(
                    "Point",
                ),
                fs_name: None,
            },
        ],
        parent_name: None,
        fs_name: None,
    },
]
