plugins/source/src/syntax/snapshots/nyne_source__syntax__tests__python_decorated_function.snap
---
source: plugins/source/src/syntax/tests.rs
expression: "decompose(\"py\", \"@app.route('/')\\ndef index():\\n    pass\\n\")"
---
[
    Fragment {
        name: "index",
        kind: Symbol(
            Function,
        ),
        span: FragmentSpan {
            byte_range: 0..37,
            full_span: 0..37,
            name_byte_offset: 20,
        },
        signature: Some(
            "@app.route('/')",
        ),
        visibility: None,
        metadata: None,
        children: [
            Fragment {
                name: "decorators",
                kind: Decorator,
                span: FragmentSpan {
                    byte_range: 0..15,
                    full_span: 0..15,
                    name_byte_offset: 0,
                },
                signature: None,
                visibility: None,
                metadata: None,
                children: [],
                parent_name: Some(
                    "index",
                ),
                fs_name: None,
            },
        ],
        parent_name: None,
        fs_name: None,
    },
]
