plugins/source/src/syntax/snapshots/nyne_source__syntax__tests__python_module_variable.snap
---
source: plugins/source/src/syntax/tests.rs
expression: "decompose(\"py\", \"MAX_SIZE = 100\\n\")"
---
[
    Fragment {
        name: "MAX_SIZE",
        kind: Symbol(
            Variable,
        ),
        span: FragmentSpan {
            byte_range: 0..14,
            full_span: 0..14,
            name_byte_offset: 0,
        },
        signature: Some(
            "MAX_SIZE = 100",
        ),
        visibility: None,
        metadata: None,
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
