plugins/source/src/syntax/snapshots/nyne_source__syntax__tests__rust_decompose_function.snap
---
source: plugins/source/src/syntax/tests.rs
expression: "decompose(\"rs\", \"pub fn hello() {}\\n\")"
---
[
    Fragment {
        name: "hello",
        kind: Symbol(
            Function,
        ),
        span: FragmentSpan {
            byte_range: 0..17,
            full_span: 0..17,
            name_byte_offset: 7,
        },
        signature: Some(
            "pub fn hello()",
        ),
        visibility: Some(
            "pub",
        ),
        metadata: None,
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
