plugins/source/src/syntax/snapshots/nyne_source__syntax__tests__rust_decompose_struct_with_impl.snap
---
source: plugins/source/src/syntax/tests.rs
assertion_line: 58
expression: "decompose(\"rs\", source)"
---
[
    Fragment {
        name: "Foo",
        kind: Symbol(
            Struct,
        ),
        byte_range: 0..30,
        signature: Some(
            "pub struct Foo",
        ),
        visibility: Some(
            "pub",
        ),
        metadata: None,
        name_byte_offset: 11,
        children: [],
        parent_name: None,
        fs_name: None,
    },
    Fragment {
        name: "Foo",
        kind: Symbol(
            Impl,
        ),
        byte_range: 32..99,
        signature: Some(
            "impl Foo",
        ),
        visibility: None,
        metadata: None,
        name_byte_offset: 32,
        children: [
            Fragment {
                name: "new",
                kind: Symbol(
                    Function,
                ),
                byte_range: 47..97,
                signature: Some(
                    "pub fn new() -> Self",
                ),
                visibility: Some(
                    "pub",
                ),
                metadata: None,
                name_byte_offset: 54,
                children: [],
                parent_name: Some(
                    "Foo",
                ),
                fs_name: None,
            },
        ],
        parent_name: None,
        fs_name: None,
    },
]
