plugins/source/src/syntax/snapshots/nyne_source__syntax__tests__rust_imports_extracted.snap
---
source: plugins/source/src/syntax/tests.rs
assertion_line: 169
expression: "super::fragment::find_fragment_of_kind(&result, &FragmentKind::Imports)"
---
Some(
    Fragment {
        name: "imports",
        kind: Imports,
        byte_range: 0..26,
        signature: None,
        visibility: None,
        metadata: None,
        name_byte_offset: 0,
        children: [],
        parent_name: None,
        fs_name: None,
    },
)
