plugins/source/src/syntax/snapshots/nyne_source__syntax__tests__rust_trait_impl_naming.snap
---
source: plugins/coding/src/syntax/tests.rs
assertion_line: 163
expression: "decompose(\"rs\", source)"
---
[
    Fragment {
        name: "Display_for_Foo",
        kind: Symbol(
            Impl,
        ),
        byte_range: 0..102,
        signature: Some(
            "impl Display for Foo",
        ),
        visibility: None,
        metadata: None,
        name_byte_offset: 0,
        children: [
            Fragment {
                name: "fmt",
                kind: Symbol(
                    Function,
                ),
                byte_range: 27..100,
                signature: Some(
                    "fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result",
                ),
                visibility: None,
                metadata: None,
                name_byte_offset: 30,
                children: [],
                parent_name: Some(
                    "Display_for_Foo",
                ),
                fs_name: None,
            },
        ],
        parent_name: None,
        fs_name: None,
    },
]
