plugins/source/src/syntax/snapshots/nyne_source__syntax__tests__tsx_uses_different_grammar.snap
---
source: plugins/source/src/syntax/tests.rs
expression: "decompose(\"tsx\", \"export function App() {\\n    return <div>Hello</div>;\\n}\\n\")"
---
[
    Fragment {
        name: "App",
        kind: Symbol(
            Function,
        ),
        span: FragmentSpan {
            byte_range: 0..54,
            full_span: 0..54,
            name_byte_offset: 16,
        },
        signature: Some(
            "export function App()",
        ),
        visibility: Some(
            "export",
        ),
        metadata: None,
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
