plugins/source/src/syntax/snapshots/nyne_source__syntax__tests__typescript_class_with_methods.snap
---
source: plugins/source/src/syntax/tests.rs
assertion_line: 120
expression: "decompose(\"ts\", \"class Greeter {\\n    greet() { return 'hi'; }\\n}\\n\")"
---
[
    Fragment {
        name: "Greeter",
        kind: Symbol(
            Class,
        ),
        byte_range: 0..46,
        signature: Some(
            "class Greeter",
        ),
        visibility: None,
        metadata: None,
        name_byte_offset: 6,
        children: [
            Fragment {
                name: "greet",
                kind: Symbol(
                    Function,
                ),
                byte_range: 20..44,
                signature: Some(
                    "greet()",
                ),
                visibility: None,
                metadata: None,
                name_byte_offset: 20,
                children: [],
                parent_name: Some(
                    "Greeter",
                ),
                fs_name: None,
            },
        ],
        parent_name: None,
        fs_name: None,
    },
]
